# gerador_curriculo

./: LICENSE  README.md  pyproject.toml
gerador_curriculo/: main.py
gerador_curriculo/data/: contact.json  education.json  education_en.json  experiences.json  experiences_en.json
gerador_curriculo/templates/: template.tex.j2  template_base.tex.j2  template_debug.tex.j2
gerador_curriculo/utils/: file_loader.py  filters.py  template_renderer.py
output/: curriculo.tex
output/en_us/: resume.aux  resume.tex
output/resume_tests/: resume_teste.aux  resume_teste.out  resume_teste.tex
tests/: test_file_loader.py  test_filters.py
