[tool.poetry]
name = "gerador-curriculo"
version = "0.1.0"
description = ""
authors = ["Jônatas Lima de Medeiros <jonatas.lima.medeiros@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
