[tool.poetry]
name = "gerador-curriculo"
version = "0.1.0"
description = ""
authors = ["Jônatas Lima de Medeiros <jonatas.lima.medeiros@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gerador-curriculo = "gerador_curriculo.main:main"